@@ -4,12 +4,6 @@ author:
   - 'Sven Nierlein, <nierlein@cpan.org>'
 build_requires:
   ExtUtils::MakeMaker: 6.42
-  Perl::Critic::Policy::Dynamic::NoIndirect: 0
-  Perl::Critic::Policy::NamingConventions::ProhibitMixedCaseSubs: 0
-  Perl::Critic::Policy::ValuesAndExpressions::ProhibitAccessOfPrivateData: 0
-  Test::Perl::Critic: 0
-  Test::Pod: 1.14
-  Test::Pod::Coverage: 0
 configure_requires:
   ExtUtils::MakeMaker: 6.42
 distribution_type: module
@@ -29,4 +23,4 @@ requires:
   perl: 5.6.0
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.05_1
+version: 0.05_2
